# TaskFlow

./: .dockerignore  .env.example  .gitignore  README.md  docker-compose.yaml  dockerfile  main.py  pyproject.toml
src/cogs/: task_commands.py  user_commands.py
src/core/: bot.py
src/templates/: task_layouts.py
src/utils/: permissions.py
